--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["api-bindings", "science"]
 readme = "README.md"
 
 [dependencies]
+libc = "0.2"
 num-bigint = "0.2"
 num-integer = "0.1.41"
 num-rational = "0.2"
